--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@subgame-network/api",
+  "name": "@subgame/api",
   "version": "0.0.1",
   "description": "create api to subgame network",
   "main": "index.js",
@@ -29,6 +29,6 @@
   "dependencies": {
     "@babel/runtime": "^7.12.5",
     "@polkadot/api": "^4.12.1",
-    "@subgame-network/types": "^0.0.1"
+    "@subgame/types": "^0.0.1"
   }
 }
