--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name":"@subgame/subgame.js",
   "repository": "https://github.com/SubGame-Network/subgame.js",
   "author": "SubGame Developers",
   "license": "Apache-2",
