modify develop.md & scripts

--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "scripts": {
     "format": "eslint '**/*.ts' --fix --ignore-pattern node_modules/",
     "genfiles": "ts-node ./script/genfiles.ts",
-    "build": "yarn build:interfaces && polkadot-dev-build-ts",
-    "build:gen": "yarn genfiles && yarn format && yarn build",
+    "gen": "yarn genfiles && yarn format",
     "build:release": "polkadot-dev-build-ts",
     "build:interfaces": "node -r ts-node/register -r tsconfig-paths/register packages/types/scripts/generate.ts && node -r ts-node/register -r tsconfig-paths/register packages/type-definitions/scripts/generate.ts",
     "lint": "polkadot-dev-run-lint",
