feat: update polkadot.js version

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -2,6 +2,7 @@
   "name": "@subgame/types",
   "version": "0.0.5",
   "description": "SubGame JS types",
+  "main": "index.js",
   "keywords": [
     "Polkadot",
     "SubGame",
@@ -26,9 +27,9 @@
     "@babel/runtime": "^7.10.2",
     "@open-web3/api-mobx": "^0.9.4-19",
     "@open-web3/orml-types": "^0.9.4-19",
-    "@polkadot/api": "^4.14.1",
-    "@polkadot/typegen": "^4.14.1",
-    "@polkadot/types": "^4.14.1",
+    "@polkadot/api": "^5.6.1",
+    "@polkadot/typegen": "^5.6.1",
+    "@polkadot/types": "^5.6.1",
     "@subgame/type-definitions": "^0.0.5"
   },
   "devDependencies": {
