--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,8 @@
       "@subgame/types/*": ["packages/types/src/*"],
       "@subgame/type-definitions": ["packages/type-definitions/src"],
       "@subgame/type-definitions/*": ["packages/type-definitions/src/*"]
-
     },
     "skipLibCheck": true,
-    "typeRoots": ["./node_modules/@polkadot/ts", "./node_modules/@types"]
+    "typeRoots": ["./node_modules/@polkadot/api/types","./node_modules/@polkadot/types", "./node_modules/@types"]
   }
 }
